2017-06-14  Charlie Zender  <zender@uci.edu>

	* Fix 4.6.7 ncremap bug where -W wgt_opt was ignored

	* Allow compression with UGRID output

2017-06-13  Charlie Zender  <zender@uci.edu>

	* Make dt_fmt automatically set PRN_CLN_LGB and obviate redundant --cal

2017-06-12  Charlie Zender  <zender@uci.edu>

	* Apply temporary fix whenever cnk_sz == 0L, period

2017-06-11  Charlie Zender  <zender@uci.edu>

	* Temporary fix to TODO nco1137 ncwa chunking fails with --rdd reported by Joy 20170605
	dmn_cmn[] contains zero for some dimensions with --rdd, so set minimum cnk_sz to 1

2017-06-09  Charlie Zender  <zender@uci.edu>

	* Fix CF dimension inferral algorithm to correctly count coordinates

	* Add lat_nm_in=j, lon_nm_in=i to look-up table for NorESM1 and similar CMIP5 grids

2017-06-08  Charlie Zender  <zender@uci.edu>

	* NCO 4.6.8-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.6.8-alpha02 final changes';git push
	git tag -a 4.6.8-alpha02 -m 'ncap2 mabs(), CDL dt_fmt, SUSE, --rnr_thr, SGS';git push --tags

	* Rename and re-order cdl_fmt_tm to dt_fmt

2017-06-07 Henry Butowsky  <henryb@hush.com>

	* Aggregate operations mibs(), mebs(), mabs() now work correctly in ncap2

2017-06-06  Charlie Zender  <zender@uci.edu>

	* Merged Daniel Neumann's autoconf patch for SUSE directory structure

2017-06-04  Charlie Zender  <zender@uci.edu>

	* User-specified --rnr_thr='off' turns-off renormalization

	* User-specified --rnr_thr overrides default 0.0 in MPAS-mode

2017-06-02  Charlie Zender  <zender@uci.edu>

	* Invoking --sgs_frc, --sgs_msk, or --sgs_nrm automatically triggers SGS-mode

2017-06-01  Charlie Zender  <zender@uci.edu>

	* Patch for NUL = '\0' != NULL errors in ncap2 supplied by Manfred Schwarb

	* ncclimo add clm_md synonyms: dly=daily,day,doy  ann=annual,yearly,year

2017-05-30  Charlie Zender  <zender@uci.edu>

	* Warn when ncclimo/ncremap and binaries are from different directories
